--- a/ama/style.css
+++ b/ama/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -12,18 +11,11 @@ body {
 
 .page-send-message {
     background: linear-gradient(to bottom, #d16ba5, #86a8e7, #5ffbf1);
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     height: 100vh;
     padding: 20px;
-    /*
-    display: block;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-    padding: 25px;
-    */
 }
 
 .message-card {
@@ -145,4 +137,27 @@ body {
 @keyframes spin {
     from { transform: translate(-50%, -50%) rotate(0deg); }
     to { transform: translate(-50%, -50%) rotate(360deg); }
+}
+
+.start-page {
+    background: #03A9F4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    padding: 20px;
+}
+
+.ama-logo {
+    margin-top: 150px;
+    width: 300px;
+    height: 300px;
+}
+
+.age-confirmation {
+    margin-top: 20px;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-size: 12px;
+    text-align: center;
 }
