--- a/ama/style.css
+++ b/ama/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .ama-logo {
-    margin-top: 50vh;
+    margin-top: 300px;
     margin-bottom: 50px;
     width: 300px;
     height: 300px;
