--- a/ama/style.css
+++ b/ama/style.css
@@ -153,7 +153,17 @@ body {
     margin-bottom: 50px;
     width: 300px;
     height: 300px;
+  -webkit-user-select: none; /* Mencegah seleksi teks (berguna juga untuk gambar) */
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  -webkit-user-drag: none; /* Mencegah drag gambar */
+  -moz-user-drag: none;
+  user-drag: none;
 }
+
 
 .age-confirmation {
     margin-top: 20px;
